# PX4-gazebo-models

./: .gitignore  conftest.py  pyproject.toml  simulation-gazebo
models/field1/: model.sdf
models/training_field/: model.sdf
models/x500_custom/: model.sdf
models/x500_depth/: 4002_gz_x500_depth  model.sdf
models/x500_depth_2/: model.sdf
scripts/: export_occupancy.py  generate_sdf.py  visualise_scene.py
src/px4_gz_scenes/: __init__.py  _math.py  _types.py  occupancy.py  pointcloud.py  registry.py  scene.py  scene_object.py  sdf.py  shapes.py  vis.py
src/px4_gz_scenes/environments/: __init__.py  office.py  room.py
tests/: test_model.py
tests/scenes/: test_environments.py  test_math.py  test_occupancy.py  test_pointcloud.py  test_registry.py  test_scene.py  test_shapes.py
tools/avl_automation/: avl_out_parse.py  input_avl.py
worlds/: cyberzoo.sdf  cyberzoo_office.sdf  cyberzoo_office_gt.bt  forest.sdf  office.sdf  office_gt.bt  room.sdf  training_field.sdf  truss_bridge.sdf
